fixing models // updating mappings
