# api/internal/handler/beta-v0/module.go
@@ -24,7 +24,7 @@ import (
 // @Produce json
 // @Param        moduleId   path      string  true  "Module ID"
 // @Success 200 {object} ModuleResponse
-// @Router /modules/{moduleId} [get]
+// @Router /api/v1/modules/{moduleId} [get]
 func NewGetModule(graphService thegraph.TheGraphServiceBeta, httpClient xhttp.Client) func(c *gin.Context) {
 	return func(c *gin.Context) {
 		moduleId := c.Param("moduleId")
@@ -55,7 +55,7 @@ func NewGetModule(graphService thegraph.TheGraphServiceBeta, httpClient xhttp.Cl
 // @Accept json
 // @Produce json
 // @Success 200 {object} ModulesResponse
-// @Router /modules [post]
+// @Router /api/v1/modules [post]
 func NewListModules(graphService thegraph.TheGraphServiceBeta, httpClient xhttp.Client) func(c *gin.Context) {
 	return func(c *gin.Context) {
 		var requestBody options2.RequestBody
