# api/internal/handler/beta-v0/permission.go
@@ -22,7 +22,7 @@ import (
 // @Produce json
 // @Param        permissionId   path      string  true  "Permission ID"
 // @Success 200 {object} PermissionResponse
-// @Router /permissions/{permissionId} [get]
+// @Router /api/v1/permissions/{permissionId} [get]
 func NewGetPermission(graphService thegraph.TheGraphServiceBeta, httpClient xhttp.Client) func(c *gin.Context) {
 	return func(c *gin.Context) {
 		permissionId := c.Param("permissionId")
@@ -53,7 +53,7 @@ func NewGetPermission(graphService thegraph.TheGraphServiceBeta, httpClient xhtt
 // @Accept json
 // @Produce json
 // @Success 200 {object} PermissionsResponse
-// @Router /permissions [post]
+// @Router /api/v1/permissions [post]
 func NewListPermissions(graphService thegraph.TheGraphServiceBeta, httpClient xhttp.Client) func(c *gin.Context) {
 	return func(c *gin.Context) {
 		var requestBody options2.RequestBody
