# api/internal/handler/beta-v0/policy_framework_manager.go
@@ -24,7 +24,7 @@ import (
 // @Produce json
 // @Param        pfwmId   path      string  true  "PolicyFrameworkManager ID"
 // @Success 200 {object} PolicyFrameworkManagerResponse
-// @Router /policyframeworks/{pfwmId} [get]
+// @Router /api/v1/policyframeworks/{pfwmId} [get]
 func NewGetPolicyFrameworkManager(graphService thegraph.TheGraphServiceBeta, httpClient xhttp.Client) func(c *gin.Context) {
 	return func(c *gin.Context) {
 		pfwmId := c.Param("pfwmId")
@@ -55,7 +55,7 @@ func NewGetPolicyFrameworkManager(graphService thegraph.TheGraphServiceBeta, htt
 // @Accept json
 // @Produce json
 // @Success 200 {object} PolicyFrameworkManagersResponse
-// @Router /policymanagers [post]
+// @Router /api/v1/policymanagers [post]
 func NewListPolicyFrameworkManagers(graphService thegraph.TheGraphServiceBeta, httpClient xhttp.Client) func(c *gin.Context) {
 	return func(c *gin.Context) {
 		var requestBody options2.RequestBody
